[tool.poetry]
name = "yolox"
authors = ["megvii basedet team"]
readme = "README.md"
description = "YOLOX is a high-performance anchor-free YOLO, exceeding yolov3~v5 with MegEngine and PyTorch."
repository = "https://github.com/tyler-romero/YOLOX"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pycocotools = "^2.0.2"
opencv-python = "^4.8.0.76"
loguru = "^0.7.0"
tqdm = "^4.66.1"
torchvision = "^0.15.2"
thop = "^0.1.1.post2209072238"
ninja = "^1.11.1"
tabulate = "^0.9.0"
psutil = "^5.9.5"
tensorboard = "^2.14.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]